1.6     2009-04-21      Only ask to confirm what this platform is in
                          Makefile.PL if AUTOMATED_TESTING is set;
                        Add MidnightBSD

1.55    2009-04-16      This time with the damned changes - really
                          shouldn't be doing releases at 1 am :-)

1.54    2009-04-16      And more irritating little changes, this time
                          to make tests pass on 5.6.2

1.53    2009-04-15      Grargh!  5.10.0 doesn't fully populate %INC
                          if a module dies when we use() it. HATE.
                          So need another way to find the files in the
                          scripts.  Grr. Hate. Kill.

1.52    2009-04-15      Scalar context bug fixed in script, thanks to
                          Mike Kelly
                        Tests and misc fixes for script

1.51    2009-04-14      OS "families" can tell you what their members are;
                        Update Extending.pod to explain that

1.50    2008-11-11      No bugs found in 1.49_01, bumping to 1.50
                        The "shrill demented choirs of wailing shells"
                          release

1.49_01 2008-11-05      add Haiku (thanks to Ingo Weinhold)
                        BeOS has a POSIXish shell
                        Makefile.PL can now explain what some of the
                          OSes and OS families are (thanks to Michael
                          Schwern for suggesting it)
                        The "only honest man to ever enter parliament"
                          release

1.46    2008-10-27      fix bug on Windows

1.45    2008-10-22      add QNX, QNX::v4, QNX::Neutrino
                          (thanks to Matt Kraai)
                        add Realtime family
                        doco about families
                        add licence text files
                        families now use documented interface instead
                          of embedding $^O values all over the place